router/apollo-router/src/orbiter/snapshots/apollo_router__orbiter__test__visit_args.snap
---
source: apollo-router/src/orbiter/mod.rs
expression: usage
---
args.config_path.<redacted>: 1
args.hot_reload.true: 1

