router/apollo-router/src/orbiter/snapshots/apollo_router__orbiter__test__visit_config.snap
---
source: apollo-router/src/orbiter/mod.rs
expression: usage
---
configuration.headers.all.request.insert.len: 1
configuration.headers.all.request.insert.name.<redacted>: 1
configuration.headers.all.request.insert.value.<redacted>: 1
configuration.headers.all.request.propagate.len: 2
configuration.headers.all.request.propagate.named.<redacted>: 2
configuration.headers.subgraphs.<redacted>.request.insert.len: 1
configuration.headers.subgraphs.<redacted>.request.insert.name.<redacted>: 1
configuration.headers.subgraphs.<redacted>.request.insert.value.<redacted>: 1
configuration.headers.subgraphs.<redacted>.request.remove.len: 1
configuration.headers.subgraphs.<redacted>.request.remove.named.<redacted>: 1
configuration.override_subgraph_url.len: 1
configuration.telemetry.apollo.send_headers.len: 1
configuration.telemetry.tracing.otlp.enabled.true: 1
configuration.telemetry.tracing.otlp.endpoint.<redacted>: 1
configuration.telemetry.tracing.otlp.grpc.metadata.len: 2
configuration.telemetry.tracing.otlp.protocol.<redacted>: 1

