router/apollo-router/src/orbiter/snapshots/apollo_router__orbiter__test__visit_config_that_needed_upgrade.snap
---
source: apollo-router/src/orbiter/mod.rs
expression: usage
---
configuration.supergraph.defer_support.true: 1

